# local_whisper_nemo

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION.md  PRD.md  README.md  README_de.md  install.bat  pyproject.toml  run.bat
docs/: architecture.md  configuration.md  deployment.md
scripts/: bootstrap_python.ps1  bootstrap_uv.ps1  create_shortcut.ps1
src/: __init__.py  commands.py  config.py  controller.py  download_model.py  hotkey.py  injector.py  main.py  overlay.py  recorder.py  session_log.py  transcriber.py  tray.py
tests/: test_commands.py  test_controller.py  test_injector.py  test_overlay.py  test_recorder.py  test_session_log.py  test_transcriber.py
