[project]
name = "local-whisper-nemo"
version = "0.1.0"
description = "Portable Windows 11 push-to-talk dictation using NVIDIA Nemotron ASR"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "transformers>=5.13.0",
    "torch>=2.2",
    "librosa>=0.10",  # required by the Nemotron feature extractor
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "keyboard>=0.13.5",
    "pystray>=0.19.5",
    "pillow>=10.0",
    "python-dotenv>=1.0",
    "huggingface-hub>=0.23",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: integration tests that load the real ASR model (deselect with '-m \"not slow\"')",
]
